--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
 
-    <title>Clos Marsault</title>
+    <title>Astrazia</title>
 
     <link rel="stylesheet" href="style.css">   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -13,23 +13,28 @@
     <header>
       <nav>
         <ul>
-          <li id="logo"><a href="#">Clos Marsault</a></li>
+          <li id="logo"><a href="#">Astrazia</a></li>
           <li><a href="#langue">Langue</a></li>
           <li><a href="#reserver">Réserver</a></li>
           <li><a href="#contact">Nous contacter</a></li>
         </ul>
       </nav>
       <div id="imagePrincipale">
-        <h1>Clos Marsault</h1>
+        <h1>Astrazia</h1>
         <div id="premierTrait"></div>
-        <h3>Chambres d'hôtes</h3>
+        <h3>Serveur Minecraft Mini-Jeux(en dev)</h3>
       </div>
 
     </header>
     <section id="presentation">
       <div id="texteIntro">
-        <h2>Un lieu unique, pour un séjour unique</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat ex veniam id quas optio, veritatis quae, ipsum similique ad amet aliquam delectus! Recusandae itaque doloremque quos velit perspiciatis nulla autem voluptatibus qui, eius quod maiores soluta necessitatibus consequatur eligendi, laborum ex eos ipsa aliquid tempora. Sunt non odio laudantium consequatur dolorum, quisquam earum repudiandae ducimus pariatur doloremque modi assumenda culpa, adipisci unde quo! Labore, sit cupiditate a cumque quibusdam, error voluptates quis tempore repudiandae nihil amet sint vel eius libero?</p>
+        <h2>Un serveur unisue, pour un jeux unique.</h2>
+        <p>IP:Soon...</p>
+        <p>Discord:Soon...</p>
+        <p>Youtube:Soon...</p>
+        <p>Tiktok:Soon...</p>
+        <p>Instagram:Soon...</p>
+        <p>twitter:Soon...</p>
       </div>
       <div id="prestations">
         <div class="imagesPrestations">
@@ -71,7 +76,7 @@
         </div>
         <div id="icons">
           <a href="http://www.twitter.fr"><i class="fa fa-twitter"></i></a>
-          <a href="http://www.facebook.fr"><i class="fa fa-facebook"></i></a>
+          <a href="http://www.youtube.fr"><i class="fa fa-youtube"></i></a>
           <a href="http://www.instagram.com"><i class="fa fa-instagram"></i></a>
 
         </div>
