--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         <ul>
           <li id="logo"><a href="#">Astrazia</a></li>
           <li><a href="#langue">Langue</a></li>
-          <li><a href="#reserver">Réserver</a></li>
-          <li><a href="#contact">Nous contacter</a></li>
+          <li><a href="#Aide">Aide</a></li>
+          <li><a href="#Wiki">Wiki</a></li>
+          <li><a href="#Nous Contacter"></a></li>
+          <li><a href="#CLassemnt"></a></li>
+          <li><a href="#Boutique"></a></li>
+          <li><a href="#Règlement"></a></li>
         </ul>
       </nav>
       <div id="imagePrincipale">
