--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <li><a href="#langue">Langue</a></li>
           <li><a href="#Aide">Aide</a></li>
           <li><a href="#Wiki">Wiki</a></li>
-          <li><a href="#Nous Contacter"></a></li>
-          <li><a href="#CLassemnt"></a></li>
-          <li><a href="#Boutique"></a></li>
-          <li><a href="#Règlement"></a></li>
+          <li><a href="#Nous Contacter">Contactez-nous</a></li>
+          <li><a href="#CLassemnt">Classemnt</a></li>
+          <li><a href="#Boutique">Boutique</a></li>
+          <li><a href="#Règlement">Règlement</a></li>
         </ul>
       </nav>
       <div id="imagePrincipale">
